--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -237,6 +237,7 @@ aside{
 			text-transform: lowercase!important;
 			font-size: .2em !important;
 			width: 100% !important;
+			height: 32px;
 			display: block !important;
 			color: #505050 !important;
 			line-height: 1.2 !important;
