--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -43,6 +43,7 @@
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-5">
 					<div class="col-xs">
 						<h2 class="show-title text-left"><%=@title = @article.title%></h2>
+						<%=@article.version%>
 					</div>
 					<div class="col-xs left-align">
 						<i class="fa fa-tag show-icon"></i>
