--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -116,6 +116,10 @@ body{
 .show-title{
 	color: #212121 !important;
 	font-size: 2rem !important;
+	margin: 0px;
+}
+.version{
+	font-size: 2em;
 }
 .show-icon{
 	font-size: 15px !important;
