--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -107,6 +107,17 @@
 		</div>
 	<% end %>
 </div>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+<!-- footerindexdowloadapps -->
+<div class="row">
+	<div class="col-xs">
+		<ins class="adsbygoogle" style="display:block" ata-ad-client="ca-pub-5053365791951337" data-ad-slot="9465024204" data-ad-format="auto"></ins>
+	</div>
+</div>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <%= render "parciales/footer" %>
 
 <div class="fixed-action-btn " style="bottom: 49px; right: 0px;">
