--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,15 +1,14 @@
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- dowloadapps -->
-    <div class="col-xs center">
-      <ins class="adsbygoogle"
-           style="display:inline-block;width:728px;height:90px"
-           data-ad-client="ca-pub-5053365791951337"
-           data-ad-slot="2157240206">
-      </ins>
-    </div>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+<!-- dowloadappsadaptable -->
+<div class="row cero-margin">
+	<div class="col-xs">
+		<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="2360559806" data-ad-format="auto"></ins>
+	</div>
+ </div>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <div class="row marin-top center-xs">
 		<%= render "parciales/tags" %>
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
@@ -118,8 +117,11 @@
 		        <%end%>
 			</div>
 		</div>
-	</div>
-	
-	
+	</div>	
 </div>
+<!-- footershowdowloadapps -->
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5053365791951337" data-ad-slot="3558091400" data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <%= render "parciales/footer" %>
