--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -112,7 +112,8 @@
 <!-- footerindexdowloadapps -->
 <div class="row">
 	<div class="col-xs">
-		<ins class="adsbygoogle" style="display:block" ata-ad-client="ca-pub-5053365791951337" data-ad-slot="9465024204" data-ad-format="auto"></ins>
+		<ins class="adsbygoogle" style="display:block" ata-ad-client="ca-pub-5053365791951337" data-ad-slot="9465024204" data-ad-format="auto">
+		</ins>
 	</div>
 </div>
 <script>
