--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
       <%= auto_discovery_link_tag(:rss, "http://dowloadapps.herokuapp.com/") %>
       <%= csrf_meta_tags %>
+      <link rel="alternate" hreflang="es" href="http://dowloadapps.herokuapp.com/" />
     <meta name="google-site-verification" content="GZLY42eex8ZXkKsdG8nlMJeflOHqUb3A66ylpeRCrAo" />
    </head>
 <body>
