--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -20,6 +20,9 @@ body{
 		transition: all 0.5s ease-in-out;
 	}
 }
+.padding-button-show{
+	padding: 0 1rem!important; 
+}
 .fa-ellipsis-v{
 	font-size: 18px !important;
 	padding: 0px 5px 0px 3px !important;
