--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,25 +16,32 @@
         <label for="textarea1">Nombre</label>
       </div>
     </div>
+
     <div class="row">
       <div class="input-field col s4">
         <i class="fa fa-link prefix"></i>
         <%= f.text_field :link_des%>
-        <label for="icon_prefix">Link de Descarga</label>
+        <label for="icon_prefix">Link de APK</label>
       </div>
-      <div class="input-field col s4">
+      <div class="input-field col s2">
         <i class="fa fa-file prefix"></i>
         <%= f.text_field :tamano%>
-        <label for="icon_prefix">Tamaño en Mb</label>
+        <label for="icon_prefix">Tamaño de APK</label>
       </div>
       <div class="input-field col s4">
-        <i class="fa fa-code-fork prefix"></i>
-        <%= f.text_field :version%>
-        <label for="icon_prefix">Versión</label>
+        <i class="fa fa-link prefix"></i>
+        <%= f.text_field :datos%>
+        <label for="icon_prefix">Link de Datos</label>
+      </div>
+      <div class="input-field col s2">
+        <i class="fa fa-link prefix"></i>
+        <%= f.text_field :pesodatos%>
+        <label for="icon_prefix">Tamaño de Datos</label>
       </div>
     </div>
+
     <div class="row">
-      <div class="file-field input-field col s6">
+      <div class="file-field input-field col s4">
         <div class="btn">
           <span>Imagen</span>
           <%= f.file_field :image, :calss=>"file" %>
@@ -43,12 +50,18 @@
           <input class="file-path validate valid" type="text" />
         </div>
       </div>
-      <div class="input-field col s6">
+      <div class="input-field col s4">
         <i class="fa fa-tags prefix"></i>
         <%= f.text_field :tag_list%>
         <label for="icon_prefix">Categorias</label>
       </div>
+      <div class="input-field col s4">
+        <i class="fa fa-code-fork prefix"></i>
+        <%= f.text_field :version%>
+        <label for="icon_prefix">Versión</label>
+      </div>
     </div>
+
     <div>
       <%= f.hidden_field :body,id:"body-textarea"%>
       <%= f.hidden_field :markup_body,id:"markup-body-textarea"%>
