--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -50,8 +50,15 @@
 						    <%= link_to tag.name, tag_path(tag),:class=>"show-color-text" %>
 						<% end %>
 					</div>
-					<div class="valign-wrapper">
-						<a href="<%=@article.link_des%>" class="waves-effect waves-light btn-large marin-top " style="width:100%; height:4em !important;"><i class="fa fa-download right"></i>DESCARGAR <%=@article.tamano%>MB</a>
+					<div class="row cero-margin">
+						<div class="valign-wrapper col-xs">
+							<a href="<%=@article.link_des%>" class="padding-button-show waves-effect waves-light btn-large marin-top " style="width:100%; height:4em !important;"><i class="fa fa-download right"></i>APK <%=@article.tamano%>MB</a>
+						</div>
+						<% unless @article.pesodatos.nil?%>
+							<div class="valign-wrapper col-xs">
+								<a href="<%=@article.datos%>" class="padding-button-show waves-effect waves-light btn-large marin-top " style="width:100%; height:4em !important;"><i class="fa fa-download right"></i>DATOS <%=@article.pesodatos%>MB</a>
+							</div>
+						<%end%>
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 right">
