--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -41,9 +41,9 @@
 			</ul>
 			<ul class="right">
 				<li class="transparent">
-					<form  action="<%=articles_path%>" method='get'%>
+					<%= form_tag articles_path, :method => 'get' do %>
 						<%= search_field_tag :search, params[:search]%>
-					</form>
+					<%end%>
 				</li>
 			</ul>
 			<div class="relative">
