--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row center-xs">
 
-  		<%= render "parciales/tags"%>
+	<%= render "parciales/tags"%>
 
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<%= render "sliderpatallacompleta" %>
@@ -8,84 +8,84 @@
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<div class="row center cero-margin">
 			<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
-			    <div class="button facebook slide_x">
-			        <div class="icon">
-			        	<i class="fa fa-facebook fa-lg"></i>
-			        </div>
-			        <div class="slide">
-			            <span>
-			                facebook
-			            </span>
-			        </div>
-			        <div class="native_button">
-			          <div>
-			        	<div class="fb-like" data-href="http://dowloadapps.herokuapp.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>    
-			          </div>
-			      </div>
-			    </div>
-		    </div>
-		    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
-			    <div class="button twitter slide_y">
-			        <div class="icon">
-			        	<i class="fa fa-twitter fa-lg"></i>
-			        </div>
-			        <div class="slide">
-			            <span>
-			                twitter
-			            </span>
-			        </div>
-			        <div class="native_button">
-			          <div>
-			          	<script id="twitter-wjs" type="text/javascript" async defer src="//platform.twitter.com/widgets.js"></script>
-			          	<a href="https://twitter.com/dowloadapps" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @dowloadapps</a>
-			          </div>
-			      </div>
-			    </div>
-		    </div>
-		    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
-			    <div class="button youtube slide_nx">
-			        <div class="icon">
-			        	<i class="fa fa-youtube"></i>
-			        </div>
-			        <div class="slide">
-			            <span>
-			                youtube
-			            </span>
-			        </div>
-			               <div class="native_button">
-			        <div>
-			        	<div class="g-ytsubscribe" data-channelid="UC-TB9hL7FXEP2XXY1_0HFSQ" data-layout="default" data-count="default"></div>      
-			        </div>
-			      </div>
-			    </div>
-		    </div>
-		    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
-			  	<div class="button gplus slide_ny">
-			        <div class="icon">
-			        	<i class="fa fa-google"></i>
-			        </div>
-			        <div class="slide">
-			            <span>
-			                google
-			            </span>
-			        </div>
-			        <div class="native_button">
+				<div class="button facebook slide_x">
+					<div class="icon">
+						<i class="fa fa-facebook fa-lg"></i>
+					</div>
+					<div class="slide">
+						<span>
+							facebook
+						</span>
+					</div>
+					<div class="native_button">
+						<div>
+							<div class="fb-like" data-href="http://dowloadapps.herokuapp.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>    
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
+				<div class="button twitter slide_y">
+					<div class="icon">
+						<i class="fa fa-twitter fa-lg"></i>
+					</div>
+					<div class="slide">
+						<span>
+							twitter
+						</span>
+					</div>
+					<div class="native_button">
+						<div>
+							<script id="twitter-wjs" type="text/javascript" async defer src="//platform.twitter.com/widgets.js"></script>
+							<a href="https://twitter.com/dowloadapps" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @dowloadapps</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
+				<div class="button youtube slide_nx">
+					<div class="icon">
+						<i class="fa fa-youtube"></i>
+					</div>
+					<div class="slide">
+						<span>
+							youtube
+						</span>
+					</div>
+					<div class="native_button">
+						<div>
+							<div class="g-ytsubscribe" data-channelid="UC-TB9hL7FXEP2XXY1_0HFSQ" data-layout="default" data-count="default"></div>      
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
+				<div class="button gplus slide_ny">
+					<div class="icon">
+						<i class="fa fa-google"></i>
+					</div>
+					<div class="slide">
+						<span>
+							google
+						</span>
+					</div>
+					<div class="native_button">
 						<div>
 							<!-- Inserta esta etiqueta donde quieras que aparezca Botón +1. -->
 							<div class="g-plusone" data-href="http://dowloadapps.herokuapp.com/"></div>
-			          	</div>
-			      	</div>
-			    </div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding" id="android">
 		<div class="row">
 			<div class="col-xs center cero-padding ">
 				<% if params[:search].blank? %>
-					<h4 class="fondos_h text-shadow left-align" >Lo último</h4>
-					<%else%>
-					<h4 class="fondos_h left-align" >Mostrando <%= @articles.count %> resultados para: "<%= params[:search] %>"</h4>
+				<h4 class="fondos_h text-shadow left-align" >Lo último</h4>
+				<%else%>
+				<h4 class="fondos_h left-align" >Mostrando <%= @articles.count %> resultados para: "<%= params[:search] %>"</h4>
 				<%end%>
 				<main class="sombras" >		
 					<%= render @articles %>
@@ -97,20 +97,20 @@
 		</div>
 	</div>
 	<% if params[:search].blank? %>
-		<% @category_where.each do |tag| %>
-			<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
-				<div class="row">
-					<div class="col-xs center cero-padding ">
-						<h4 class="fondos_h text-shadow left-align" >Categoria: <%=link_to tag.name,tag%><!--<a href="/category/juegos"><i class="fa fa-share right"></i></a>--></h4>
-						<main class="sombras" >	
-				  			<% tag.articles.limit(6).each do |article| %>
-				    			<%=render partial: "article" , locals: { article: article } %>
-							<% end %>
-				  		</main>
-				  	</div>
-			  	</div>
+	<% @category_where.each do |tag| %>
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
+		<div class="row">
+			<div class="col-xs center cero-padding ">
+				<h4 class="fondos_h text-shadow left-align" >Categoria: <%=link_to tag.name,tag%><!--<a href="/category/juegos"><i class="fa fa-share right"></i></a>--></h4>
+				<main class="sombras" >	
+					<% tag.articles.limit(6).each do |article| %>
+					<%=render partial: "article" , locals: { article: article } %>
+					<% end %>
+				</main>
 			</div>
-		<% end %>
+		</div>
+	</div>
+	<% end %>
 	<%end%>
 </div>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -123,20 +123,20 @@
 	</div>
 </div>
 <script>
-(adsbygoogle = window.adsbygoogle || []).push({});
+	(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <%= render "parciales/footer" %>
 
 <div class="fixed-action-btn " style="bottom: 49px; right: 0px;">
-    <a class="btn-floating btn-large black">
-    	<i class="fa fa-share-alt"></i>
-      
-    </a>
-    <ul>
-      <li><a class="btn-floating red" href='http://plus.google.com/share?url=http://dowloadapps.herokuapp.com/' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-google-plus"></i></a></li>
+	<a class="btn-floating btn-large black">
+		<i class="fa fa-share-alt"></i>
 
-      <li><a class="btn-floating blue" href='https://twitter.com/intent/tweet?url=http://dowloadapps.herokuapp.com/&amp;text=dowloadapps&amp;via=dowloadapps' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-twitter"></i></a></li>
+	</a>
+	<ul>
+		<li><a class="btn-floating red" href='http://plus.google.com/share?url=http://dowloadapps.herokuapp.com/' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-google-plus"></i></a></li>
 
-      <li><a href="http://www.facebook.com/sharer.php?u=http://dowloadapps.herokuapp.com/" class="btn-floating blue darken-4" rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-facebook"></i></a></li>
-    </ul>
+		<li><a class="btn-floating blue" href='https://twitter.com/intent/tweet?url=http://dowloadapps.herokuapp.com/&amp;text=dowloadapps&amp;via=dowloadapps' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-twitter"></i></a></li>
+
+		<li><a href="http://www.facebook.com/sharer.php?u=http://dowloadapps.herokuapp.com/" class="btn-floating blue darken-4" rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-facebook"></i></a></li>
+	</ul>
 </div>
