--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -25,8 +25,8 @@
 						</a>
 					</li>
 				<%end%>
-				<li class="li-nav toggle">
-					<a class="dropdown-button">
+				<li class="li-nav">
+					<a>
 						<i class="fa fa-tags ico-nav"></i>
 						<span class="font-nav">Categorias</span>
 						<i class="fa fa-sort-desc right fa-lg"></i>
