--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -371,8 +371,14 @@ nav{
 	padding: 0px !important;
 }
 .li-nav{
+	a{
+		height: 64px !important;
+	}
 	height: 64px !important;
-	padding: 0em 1em !important;
+	&:last-child{
+		padding: 0em 1em !important;
+	}
+	
 }
 .ico-nav{
 	font-size: 1.5em !important;
