--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
    <!-- Modal Structure -->
    <div id="modal1" class="modal">
       <div class="modal-footer">
-         <a class="modal-action modal-close waves-effect waves-green btn-flat "><i class="fa fa-times"></i></a>
+         <a class="modal-action modal-close waves-circle waves-effect waves-green btn-flat "><i class="fa fa-times"></i></a>
       </div>
       <div class="modal-content ">
          <h4>Log in</h4>
