--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -25,7 +25,7 @@
 						</a>
 					</li>
 				<%end%>
-				<li class="li-nav">
+				<li class="li-nav toggle">
 					<a>
 						<i class="fa fa-tags ico-nav"></i>
 						<span class="font-nav">Categorias</span>
