--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
       <%= csrf_meta_tags %>
       <link rel="alternate" hreflang="es" href="http://dowloadapps.herokuapp.com/" />
     <meta name="google-site-verification" content="GZLY42eex8ZXkKsdG8nlMJeflOHqUb3A66ylpeRCrAo" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
    </head>
 <body>
   <h1 class="fondos_h text-shadow oculto" >Aplicaciones para Android</h1>
