--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,5 +1,5 @@
 body{
-	background-color: #F5F5F5;
+	background-color: #EEEEEE;
 	max-width: 100%;
 	font-weight:100;
 	text-rendering:optimizeLegibility;
@@ -199,7 +199,7 @@ aside{
   color: white;
   font-size: 2em;
   padding: 1px;
-  marging: 0;
+  margin: 0;
   background: transparent;
   border: none;
   outline: none;
@@ -240,8 +240,9 @@ aside{
 			font-size: 4.5rem !important;
 		}
 		a{
-			font-family: 'Roboto', sans-serif;
-			text-transform: lowercase!important;
+			font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
+			font-weight: 300 !important;
+			text-transform: capitalize !important;
 			font-size: .2em !important;
 			width: 100% !important;
 			height: 32px;
@@ -290,23 +291,25 @@ aside{
 		p{
 			margin: .5em 0 0 0 !important;
 			line-height: 1.3;
+			font-weight: 300;
 		}
 	}
 }
 .fondos_h{
 	font-size: 1.5em;
-	background-color: #212121;
+	background-color: #009688;
+	font-weight: 300 !important;
 	color: #FFF !important;
 	margin: 0;
-	border-left: 20px solid #0288d1;
+	border-left: 20px solid #009688;
 	font-family: 'Old Standard TT', serif;
 	padding: 5px 0px 5px 0px;
 	a{
 		color: #fff !important;
-		text-transform: uppercase;
+		text-transform: capitalize;
 		font-size: .8em !important;
 		&:hover{
-			text-decoration: underline;
+			text-decoration: none;
 		}
 	}
 	i{
@@ -336,13 +339,6 @@ footer{
 	background-color: #383b43 !important;
 	color: #e0e0e0 ;
 	border-top: 1px solid rgba(144, 144, 144, 0.25 );
-}
-.text-shadow{
-	text-shadow: 1px 1px 0px #585858,
-				2px 2px 0px #585858,
-				3px 3px 0px #585858,
-				4px 4px 0px black;
-				font-size: 1.5em;
 }
 
 nav{
