--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -139,11 +139,12 @@ body{
 	}
 }
 .show-color-text{
+	font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
 	color: #616161 !important;
-	&:hover{
-		text-decoration: underline !important;
-		color: rgba(0,0,0,0.49) !important;
-	}
+	background-color: #03a9f4;
+	padding: .2em .6em .3em;
+	font-size: 80%;
+	border-radius: 3px;
 }
 .show-user{
 	margin-top: 5em !important;
