--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -140,7 +140,7 @@ body{
 }
 .show-color-text{
 	font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-	color: #616161 !important;
+	color: #FFF !important;
 	background-color: #03a9f4;
 	padding: .2em .6em .3em;
 	font-size: 80%;
