--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -105,7 +105,7 @@
 					<div class="col-xs-6 left-align">
 						<h5>Comentarios</h5>
 					</div>
-					<div class="col-xs">
+					<div class="col-xs-12">
 						<div id="disqus_thread"></div>
 						<script>
 						/**
