--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,11 @@
 <div class="row center-xs">
-
+	<!-- Estas sob las etiquetas que aparecen y desaparecen -->
 	<%= render "parciales/tags"%>
-
+	<!-- Este es el slider de patalla completa -->
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<%= render "sliderpatallacompleta" %>
 	</div>
+	<!-- Botones sociales tipo ventanilla -->
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<div class="row center cero-margin">
 			<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
@@ -78,7 +79,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div><!-- fin de botones sociales -->
+	<!-- articles el que tiene el pagiandor estan ordenados por los mas nuevos -->
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding" id="android">
 		<div class="row">
 			<div class="col-xs center cero-padding ">
@@ -96,6 +98,7 @@
 			</div>
 		</div>
 	</div>
+	<!-- Articles de categorias -->
 	<% if params[:search].blank? %>
 	<% @category_where.each do |tag| %>
 	<%unless tag.name=="lifestyle" or tag.name=="productividad" %>
@@ -127,18 +130,17 @@
 <script>
 	(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+<!-- para cuando javaScrip esta desabilitado -->
+<noscript>Put Sample code here for execution when JavaScript is Disabled</noscript>
 <%= render "parciales/footer" %>
-
+<!-- boton flotante de compartir redes sociales -->
 <div class="fixed-action-btn " style="bottom: 49px; right: 0px;">
-	<a class="btn-floating btn-large black">
-		<i class="fa fa-share-alt"></i>
-
-	</a>
+	<a class="btn-floating btn-large black"><i class="fa fa-share-alt"></i></a>
 	<ul>
-		<li><a class="btn-floating red" href='http://plus.google.com/share?url=http://dowloadapps.herokuapp.com/' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-google-plus"></i></a></li>
+		<li><a class="btn-floating red" href='http://plus.google.com/share?url=http://dowloadapps.herokuapp.com/' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-google-plus"></i></a></li><!-- boton de google -->
 
-		<li><a class="btn-floating blue" href='https://twitter.com/intent/tweet?url=http://dowloadapps.herokuapp.com/&amp;text=dowloadapps&amp;via=dowloadapps' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-twitter"></i></a></li>
+		<li><a class="btn-floating blue" href='https://twitter.com/intent/tweet?url=http://dowloadapps.herokuapp.com/&amp;text=dowloadapps&amp;via=dowloadapps' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-twitter"></i></a></li><!-- boton de twitter -->
 
-		<li><a href="http://www.facebook.com/sharer.php?u=http://dowloadapps.herokuapp.com/" class="btn-floating blue darken-4" rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-facebook"></i></a></li>
+		<li><a href="http://www.facebook.com/sharer.php?u=http://dowloadapps.herokuapp.com/" class="btn-floating blue darken-4" rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-facebook"></i></a></li><!-- boton de facebook -->
 	</ul>
 </div>
