--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 
        <%= analytics_init if GoogleAnalytics.valid_tracker? %>
     <%= yield %>
-   <!-- Modal Structure -->
+   <!-- Modal Structure  de ingresar-->
    <div id="modal1" class="modal">
       <div class="modal-footer">
          <a class="modal-action modal-close waves-circle waves-effect waves-green btn-flat "><i class="fa fa-times"></i></a>
@@ -53,7 +53,7 @@
          <%= render "parciales/devise" %>
       </div>
    </div>
-
+  <!-- ventana flotante de registrarse -->
    <div id="modal2" class="modal ">
       <div class="modal-footer">
          <a class="modal-action modal-close waves-effect waves-green btn-flat "><i class="fa fa-times"></i></a>
