--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -105,7 +105,7 @@
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<div class="row">
 			<div class="col-xs center cero-padding ">
-				<h4 class="fondos_h left-align" >Categoria: <%=link_to tag.name,tag%><!--<a href="/category/juegos"><i class="fa fa-share right"></i></a>--></h4>
+				<h4 class="fondos_h left-align" >Categoria: <%=link_to tag.name,tag%></h4>
 				<main class="sombras" >	
 					<% tag.articles.limit(6).each do |article| %>
 					<%=render partial: "article" , locals: { article: article } %>
