--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -131,7 +131,7 @@
 	(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <!-- para cuando javaScrip esta desabilitado -->
-<noscript>Put Sample code here for execution when JavaScript is Disabled</noscript>
+<noscript>Esta pagina no funcionara Correctamente si JavaScrip esta desabilitado.</noscript>
 <%= render "parciales/footer" %>
 <!-- boton flotante de compartir redes sociales -->
 <div class="fixed-action-btn " style="bottom: 49px; right: 0px;">
