--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,8 @@
 <div class="row center-xs">
+	<div class="chip">
+ 		<!-- para cuando javaScrip esta desabilitado -->
+		<noscript>Esta pagina no funcionara Correctamente si JavaScrip esta desabilitado.</noscript>
+	</div>
 	<!-- Estas sob las etiquetas que aparecen y desaparecen -->
 	<%= render "parciales/tags"%>
 	<!-- Este es el slider de patalla completa -->
@@ -130,8 +134,8 @@
 <script>
 	(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<!-- para cuando javaScrip esta desabilitado -->
-<noscript>Esta pagina no funcionara Correctamente si JavaScrip esta desabilitado.</noscript>
+
+
 <%= render "parciales/footer" %>
 <!-- boton flotante de compartir redes sociales -->
 <div class="fixed-action-btn " style="bottom: 49px; right: 0px;">
