--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row center-xs">
 	<div class="chip">
  		<!-- para cuando javaScrip esta desabilitado -->
-		<noscript>Esta pagina no funcionara Correctamente si JavaScrip esta desabilitado.</noscript>
+		<noscript>Esta pagina no funcionara Correctamente si JavaScript esta deshabilitado.</noscript>
 	</div>
 	<!-- Estas sob las etiquetas que aparecen y desaparecen -->
 	<%= render "parciales/tags"%>
