--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -81,8 +81,8 @@
 			</div>
 
 			<div class="border-top row center-xs">
-				<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
-					<h4 class="caracteristicas">Caracteristicas</h4>
+				<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 left-align">
+					<h4 class="caracteristicas center-align">Caracteristicas</h4>
 					<%= Sanitize.fragment(@article.body, Sanitize::Config::RELAXED).html_safe%>
 				</div>
 			</div>
