--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -107,7 +107,7 @@
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<div class="row">
 			<div class="col-xs center cero-padding ">
-				<h4 class="fondos_h left-align" >Categoria: <span><%=tag.name%></span><%=link_to tag, :class=>"right" do%><i class="fa fa-arrow-circle-right"></i><%end%></h4>
+				<h4 class="fondos_h left-align" >Categoria: <span><%=tag.name%></span><%=link_to tag, :class=>"right" do%><i data-tooltip="Más" data-delay="50" data-position="left" class="fa fa-arrow-circle-right tooltipped"></i><%end%></h4>
 				<main class="sombras" >	
 					<% tag.articles.limit(6).each do |article| %>
 					<%=render partial: "article" , locals: { article: article } %>
