--- a/app/views/parciales/_footer.html.erb
+++ b/app/views/parciales/_footer.html.erb
@@ -32,8 +32,13 @@
 
    <div class="footer-copyright copyright">
          <span>© 2016 Todos los derechos resevados</span>
-         <a class="grey-text text-lighten-4 right" href="#!"></a>
-         <a class="right grey-text text-lighten-4" onclick="location.reload()" style="font-size:.8em;"><em>¿Problemas para Ingresar? Recarga la Pagina!</em></a>
+         <a class="right grey-text text-lighten-4" style="font-size:.8em;">
+          <em>
+              
+              Más de <%= articulos.count %> Aplicaciones
+            
+          </em>
+        </a>
       
    </div>
 </footer>
