--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -52,7 +52,7 @@
 					</div>
 					<div class="row cero-margin">
 						<div class="valign-wrapper col-xs">
-							<a href="<%=@article.link_des%>" class="padding-button-show waves-effect waves-light btn-large marin-top " style="width:100%; height:4em !important;"><i class="fa fa-download right"></i>APK <%=@article.tamano%>MB</a>
+							<a href="<%=@article.link_des%>" target="_blank" class="padding-button-show waves-effect waves-light btn-large marin-top " style="width:100%; height:4em !important;"><i class="fa fa-download right"></i>APK <%=@article.tamano%>MB</a>
 						</div>
 						<% unless @article.pesodatos.nil?%>
 						<div class="valign-wrapper col-xs">
