--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -29,7 +29,7 @@
 						</div>
 						<div class="col-xs-4 right-align show-icon">
 							<i class="fa fa-eye"></i>
-							<span class="show-user">Visitas:<%=@article.visits_count%></span>
+							<span class="show-user" data-no-turbolink="true">Visitas:<%=@article.visits_count%></span>
 						</div>
 					</div>
 				</div>
