--- a/app/views/parciales/_tags.html.erb
+++ b/app/views/parciales/_tags.html.erb
@@ -2,7 +2,7 @@
 	<aside>
 		<div class="row cero-margin">
 			
-			<% @category_where.each do |tag| %>
+			<% category_where.each do |tag| %>
 				<%if tag.name=="juegos"%>
 					<% @back_color_tag ="green darken-2" %>
 					<% icon_tag= "fa fa-gamepad" %>
