--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,7 +107,11 @@
       </div>
    </div>
    <script>
-   $( "#preloader" ).addClass( "hide" );
+   $(document).ready(function() {
+      setTimeout(function (){
+        $( "#preloader" ).addClass( "hide" );
+      },5000);
+    });
    </script>
 </body>
 </html>
