--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,7 +107,7 @@
       </div>
    </div>
    <script>
-   $(window).load(function() {
+   $(document).ready(function() {
       $( "#preloader" ).addClass( "hide" );
     });
    </script>
