--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,9 +108,9 @@
    </div>
    <script>
    
-      var ready = function(){ 
+      function ready(){ 
         $( "#preloader" ).addClass( "hide" );
-    };
+    }
       $(document).ready(ready);
       $(document).on('page:load', ready);
    </script>
