--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,117 +1,115 @@
 <!DOCTYPE html>
 <html lang="es-MX">
-   <head>
-      <%= meta_tags %>
-      <link rel="icon" type="image/png" href="http://compumexicopc.webcindario.com/images/logo.png" />
-      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-      <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-      <%= auto_discovery_link_tag(:rss, "http://dowloadapps.herokuapp.com/") %>
-      <link rel="alternate" hreflang="es" href="http://dowloadapps.herokuapp.com/" />
-    <meta name="google-site-verification" content="GZLY42eex8ZXkKsdG8nlMJeflOHqUb3A66ylpeRCrAo" />
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-   </head>
+	<head>
+		<%= meta_tags %>
+		<link rel="icon" type="image/png" href="http://compumexicopc.webcindario.com/images/logo.png" />
+		<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+		<%= auto_discovery_link_tag(:rss, "http://dowloadapps.herokuapp.com/") %>
+		<link rel="alternate" hreflang="es" href="http://dowloadapps.herokuapp.com/" />
+	 <meta name="google-site-verification" content="GZLY42eex8ZXkKsdG8nlMJeflOHqUb3A66ylpeRCrAo" />
+	 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+	</head>
 <body>
 <div id="preloader">
   <div class="preloader-wrapper big active">
-      <div class="spinner-layer spinner-blue">
-        <div class="circle-clipper left">
-          <div class="circle"></div>
-        </div><div class="gap-patch">
-          <div class="circle"></div>
-        </div><div class="circle-clipper right">
-          <div class="circle"></div>
-        </div>
-      </div>
+		<div class="spinner-layer spinner-blue">
+		  <div class="circle-clipper left">
+			 <div class="circle"></div>
+		  </div><div class="gap-patch">
+			 <div class="circle"></div>
+		  </div><div class="circle-clipper right">
+			 <div class="circle"></div>
+		  </div>
+		</div>
 
-      <div class="spinner-layer spinner-red">
-        <div class="circle-clipper left">
-          <div class="circle"></div>
-        </div><div class="gap-patch">
-          <div class="circle"></div>
-        </div><div class="circle-clipper right">
-          <div class="circle"></div>
-        </div>
-      </div>
+		<div class="spinner-layer spinner-red">
+		  <div class="circle-clipper left">
+			 <div class="circle"></div>
+		  </div><div class="gap-patch">
+			 <div class="circle"></div>
+		  </div><div class="circle-clipper right">
+			 <div class="circle"></div>
+		  </div>
+		</div>
 
-      <div class="spinner-layer spinner-yellow">
-        <div class="circle-clipper left">
-          <div class="circle"></div>
-        </div><div class="gap-patch">
-          <div class="circle"></div>
-        </div><div class="circle-clipper right">
-          <div class="circle"></div>
-        </div>
-      </div>
+		<div class="spinner-layer spinner-yellow">
+		  <div class="circle-clipper left">
+			 <div class="circle"></div>
+		  </div><div class="gap-patch">
+			 <div class="circle"></div>
+		  </div><div class="circle-clipper right">
+			 <div class="circle"></div>
+		  </div>
+		</div>
 
-      <div class="spinner-layer spinner-green">
-        <div class="circle-clipper left">
-          <div class="circle"></div>
-        </div><div class="gap-patch">
-          <div class="circle"></div>
-        </div><div class="circle-clipper right">
-          <div class="circle"></div>
-        </div>
-      </div>
-    </div>
+		<div class="spinner-layer spinner-green">
+		  <div class="circle-clipper left">
+			 <div class="circle"></div>
+		  </div><div class="gap-patch">
+			 <div class="circle"></div>
+		  </div><div class="circle-clipper right">
+			 <div class="circle"></div>
+		  </div>
+		</div>
+	 </div>
 </div>
 
   <h1 class="fondos_h text-shadow oculto" >Aplicaciones para Android</h1>
-    <%= render "parciales/navegacion" %>
-    
-    <% if notice %>
-      <div id="flash-message" class="flash-message green">
-        <button type="button" class="close">&times;</button>
-        <i class="fa fa-check"></i><div class="margin"><%= notice %></div>
-      </div>
-    <% end %>
-    <% if alert %>
-      
-      <div id="flash-message" class="flash-message red">
-        <button type="button" class="close">&times;</button>
-        <i class="fa fa-exclamation"></i>
-        <div class="margin"><%= alert %></div>
-      </div>
-    <% end %>
+	 <%= render "parciales/navegacion" %>
+	 
+	 <% if notice %>
+		<div id="flash-message" class="flash-message green">
+		  <button type="button" class="close">&times;</button>
+		  <i class="fa fa-check"></i><div class="margin"><%= notice %></div>
+		</div>
+	 <% end %>
+	 <% if alert %>
+		
+		<div id="flash-message" class="flash-message red">
+		  <button type="button" class="close">&times;</button>
+		  <i class="fa fa-exclamation"></i>
+		  <div class="margin"><%= alert %></div>
+		</div>
+	 <% end %>
 
-   <div class="fixed-action-btn right-align" style="bottom: 76.5%; right: 0px;">
-      <%if can? :new, @article%>
-         <%= link_to new_article_path, :class =>"btn-floating btn-large red" do%>
-            <i class="fa fa-plus"></i>
-         <%end%>
-      <%end%>
-   </div>
+	<div class="fixed-action-btn right-align" style="bottom: 76.5%; right: 0px;">
+		<%if can? :new, @article%>
+			<%= link_to new_article_path, :class =>"btn-floating btn-large red" do%>
+				<i class="fa fa-plus"></i>
+			<%end%>
+		<%end%>
+	</div>
   
  <!--facebook-->
-    <div id="fb-root"></div>
+	 <div id="fb-root"></div>
 
-       <%= analytics_init if GoogleAnalytics.valid_tracker? %>
-    <%= yield %>
-   <!-- Modal Structure  de ingresar-->
-   <div id="modal1" class="modal">
-      <div class="modal-footer">
-         <a class="modal-action modal-close waves-circle waves-effect waves-green btn-flat "><i class="fa fa-times"></i></a>
-      </div>
-      <div class="modal-content ">
-         <h4>Log in</h4>
-         <%= render "parciales/devise" %>
-      </div>
-   </div>
+		 <%= analytics_init if GoogleAnalytics.valid_tracker? %>
+	 <%= yield %>
+	<!-- Modal Structure  de ingresar-->
+	<div id="modal1" class="modal">
+		<div class="modal-footer">
+			<a class="modal-action modal-close waves-circle waves-effect waves-green btn-flat "><i class="fa fa-times"></i></a>
+		</div>
+		<div class="modal-content ">
+			<h4>Log in</h4>
+			<%= render "parciales/devise" %>
+		</div>
+	</div>
   <!-- ventana flotante de registrarse -->
-   <div id="modal2" class="modal ">
-      <div class="modal-footer">
-         <a class="modal-action modal-close waves-effect waves-green btn-flat "><i class="fa fa-times"></i></a>
-      </div>
-      <div class="modal-content">
-         <h4>Registro</h4>
-         <%= render "parciales/new" %>
-      </div>
-   </div>
-   <script>
-   
-      function ready(){ 
-        $( "#preloader" ).addClass( "hide" );
-    }
-      $(document).on('page:load', ready);
-   </script>
+	<div id="modal2" class="modal ">
+		<div class="modal-footer">
+			<a class="modal-action modal-close waves-effect waves-green btn-flat "><i class="fa fa-times"></i></a>
+		</div>
+		<div class="modal-content">
+			<h4>Registro</h4>
+			<%= render "parciales/new" %>
+		</div>
+	</div>
+	<script>
+		$(document).on('ready page:load',function(){
+		  $( "#preloader" ).addClass( "hide" );
+		});
+	</script>
 </body>
 </html>
