--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,7 +107,7 @@
 		</div>
 	</div>
 	<script>
-		$(document).on('ready page:load',function(){
+		$(document).on('page:change',function(){
 		  $( "#preloader" ).addClass( "hide" );
 		});
 	</script>
