--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,9 +107,12 @@
 		</div>
 	</div>
 	<script>
-		$(document).on('page:change',function(){
-		  $( "#preloader" ).addClass( "hide" );
-		});
+		var do_on_load = function(){
+			$( "#preloader" ).addClass( "hide" );
+		}
+		  
+		  	$(document).ready(do_on_load);
+			$(window).bind('page:change', do_on_load);
 	</script>
 </body>
 </html>
