--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -27,6 +27,23 @@ body{
 		transition: all 0.5s ease-in-out;
 	}
 }
+.collection{
+	div{
+		position:relative;
+		width: 100%;
+		.absolute-button{
+			position: absolute;
+			right: 0px;
+			bottom: 0px;
+		}
+		.absolute-top{
+			position: absolute;
+			right: 0px;
+			top: 0px;
+		}
+		
+	}
+}
 //padding de los botones de descarga de show
 .padding-button-show{
 	padding: 0 1rem!important; 
