--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -11,10 +11,10 @@
 					<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3">
 						<div class="collection row center-align">
 							<%= link_to tag.name,tag,:class =>"collection-item col-xs-12"%>
-							<div style="right:5px; bottom:0px; position:absolute; ">
+							<div>
 								<%if can? :destroy, @tag%>
 									<%= link_to tag, method: :delete, data: { confirm: '¿Desea Eliminar Esto?' } do%>
-										<i class="fa fa-trash-o" ></i>
+										<i class="fa fa-trash-o absolute-button" ></i>
 									<%end%>
 								<%end%>
 							</div>
