--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,7 +107,7 @@
 		</div>
 	</div>
 	<!-- ventana flotante de registrarse -->
-	<div id="modal3" class="modal ">
+	<div id="modal3" class="modal width-full">
 		<div class="modal-footer">
 			<a class="modal-action modal-close waves-effect waves-green btn-flat "><i class="fa fa-times"></i></a>
 		</div>
@@ -120,11 +120,11 @@
 			      </ul>
 			    </div>
 			    <div id="test1" class="col-xs-12">
-			    	<h4>Iniciar Sesión</h4>
+			    	<h5>Iniciar Sesión</h5>
 					<%= render "parciales/devise" %>
 			    </div>
 			    <div id="test2" class="col-xs-12">
-					<h4>Registro</h4>
+					<h5>Registro</h5>
 					<%= render "parciales/new" %>
 			    </div>
 	  		</div>
