--- a/app/views/parciales/_new.html.erb
+++ b/app/views/parciales/_new.html.erb
@@ -1,22 +1,22 @@
 <div class="row">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name),html:{:class =>"col s12"}) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name),html:{:class =>"col s12 cero-padding"}) do |f| %>
 
     <div class="row">
     
-      <div class="input-field col s12">
+      <div class="input-field col s12 cero-padding">
         <i class="fa fa-user prefix"></i>
         <%= f.text_field :username,required:"required"%>
         <%= f.label :username,"Nombre de Usuario" %>
       </div>
 
-      <div class="input-field col s12">
+      <div class="input-field col s12 cero-padding">
         <i class="fa fa-envelope prefix"></i>
         <%= f.email_field :email,required:"required"%>
         <%= f.label :email,"Correo Electronico" %>
       </div>
       
 
-      <div class="input-field col s12">
+      <div class="input-field col s12 cero-padding">
         <i class="fa fa-user-secret prefix"></i>
         <% if @minimum_password_length %>
         <em><% @minimum_password_length %></em>
@@ -27,14 +27,14 @@
         <%= f.password_field :password, autocomplete: "off",required:"required" %>
       </div>
 
-      <div class="input-field col s12">
+      <div class="input-field col s12 cero-padding">
         <i class="fa fa-user-secret prefix"></i>
         <%= f.password_field :password_confirmation, autocomplete: "off" ,required:"required"%>
         <%= f.label :password_confirmation,"Confirmar Contreseña" %>
       </div>
 
       
-       <div class="actions col s12 right-align ">
+       <div class="actions col s12 right-align cero-padding">
          <button class="btn waves-effect waves-light valign btn-ingresar" type="submit" name="action" style="width: 100%;height:35px;">
          CREAR CUENTA
          <i class="fa fa-paper-plane right"></i>
