--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -40,7 +40,7 @@
 				<%end%>
 			</ul>
 			<ul class="right hide-on-large-only">
-				<li class="li-nav" data-target="modal3">
+				<li data-target="modal3">
 					<a class="modal-trigger" data-target="modal3">
 						<i class="fa fa-user ico-nav"></i>
 					</a>
@@ -75,7 +75,7 @@
 						
 					<%end%>
 				</li>
-				
+
 				<%if user_signed_in?%>
 					<div class="col s12 m8 offset-m2 l6 offset-l3">
 				        <div class="card-panel grey lighten-5 z-depth-1 cero-padding" style="box-shadow: 0px 0px; margin:0px; line-height: 20px;">
