--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -26,7 +26,7 @@
 					</li>
 				<%end%>
 				<li class="li-nav toggle">
-					<a href="#target">
+					<a class="arriva">
 						<i class="fa fa-tags ico-nav"></i>
 						<span class="font-nav">Categorias</span>
 						<i class="fa fa-sort-desc right fa-lg"></i>
