--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -115,7 +115,7 @@
 							<% @back_color_tag ="blue-grey darken-3" %>
 							<% icon_tag= "fa fa-line-chart" %>
 						<%end%>
-						<li  class="<%= @back_color_tag %>">
+						<li  class="<%= @back_color_tag %> collection-tags-nav">
 							<%= link_to tag do%>
 								<i class="<%= icon_tag %> ico-nav grey-text text-lighten-5"></i>
 								<span class="font-nav grey-text text-lighten-5"><%= tag.name %></span>
