--- a/app/views/parciales/_tags.html.erb
+++ b/app/views/parciales/_tags.html.erb
@@ -22,7 +22,7 @@
 						<% icon_tag= "fa fa-line-chart" %>
 				<%end%>
 				<div class="col-xs-6 col-sm-4 col-md-4 col-lg-4 ">
-					<div class="collection row center-align colection-tags <%= @back_color_tag %>">
+					<div class="collection row center-align collection-tags <%= @back_color_tag %>">
 						<i class="<%= icon_tag %>"></i>
 						<%= link_to tag.name,tag,:class =>"collection-item col-xs-12 transparent grey-text text-lighten-5 "%>
 					</div>
